infrastructure/base/longhorn/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  namespace: longhorn-system

spec:
  entryPoints:
    - web
    - websecure

  routes:
    - match: PathPrefix(`/longhorn`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
